# YM2149_ESP32

./: .cproject  .gitignore  .project  Makefile  README.md  sdkconfig  sdkconfig.old
fritzing/: esp32_sndchip_ym2149.fzz
front/web-demo/: package.json
front/web-demo/src/: router.js
front/web-demo/src/views/: YM2149.vue
front/ym2149/: index.html
front/ym2149/css/: global.css
front/ym2149/js/: knob_handler.js  pureknob.js  switch_handler.js
front/ym2149/svg/: test.html
kicad/esp32_ym2149/: _autosave-esp32_ym2149.kicad_pcb  esp32_ym2149.kicad_pcb  esp32_ym2149.kicad_pcb-bak  esp32_ym2149.net  esp32_ym2149.pro  esp32_ym2149.sch  esp32_ym2149.sch-bak  fp-info-cache  sym-lib-table
kicad/esp32_ym2149/gerber/: esp32_ym2149-B_Paste.gbr  esp32_ym2149-Edge_Cuts.gbr  esp32_ym2149-F_SilkS.gbr
kicad/esp32_ym2149_v1/: esp32_ym2149.kicad_pcb  esp32_ym2149.sch  esp32_ym2149.sch-bak  fp-info-cache  ym2149_tht.kicad_pcb
kicad/esp32_ym2149_v1/gerber/: esp32_ym2149-B_Cu.gbr  esp32_ym2149-B_Mask.gbr  esp32_ym2149-B_SilkS.gbr  esp32_ym2149-F_Cu.gbr  esp32_ym2149-F_Paste.gbr  esp32_ym2149-NPTH.drl  esp32_ym2149-PTH.drl
kicad/esp32_ym2149_v2/: _autosave-ym2149_tht.kicad_pcb  esp32_ym2149.kicad_pcb  esp32_ym2149.kicad_pcb-bak  esp32_ym2149.net  esp32_ym2149.pro  esp32_ym2149.sch  esp32_ym2149.sch-bak  fp-lib-table
kicad/esp32_ym2149_v2/gerber/: esp32_ym2149-F_Mask.gbr
main/: CMakeLists.txt  esp_rest_main.c  led_handler.c  rest_common.c  rest_common.h  rest_ym2149.c  secrets_example.h  spi_74hc595.h  spi_config.h  ym2149.c  ym2149.h
